--- a/slides/package.json
+++ b/slides/package.json
@@ -15,14 +15,15 @@
         "babel-preset-env": "^1.7.0",
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
         "pug": "^2.0.3",
         "pug-cli": "^1.0.0-alpha6",
+        "pug-loader": "^2.4.0",
         "style-loader": "^0.22.1",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0"
     },
     "scripts": {
-        "pug": "pug --out ../assets/static/slides/ index.pug",
         "webpack": "webpack"
     }
 }
