--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install pipenv
   - pipenv install
 script:
-  - pipenv run lektor build
+  - pipenv run lektor build -f webpack
 deploy:
   provider: script
   script: pipenv run lektor deploy ghpages
