--- a/webpack/package.json
+++ b/webpack/package.json
@@ -6,6 +6,7 @@
     "license": "BSD-2-Clause",
     "private": true,
     "dependencies": {
+        "highlight.js": "^9.12.0",
         "reveal.js": "^3.7.0"
     },
     "devDependencies": {
