--- a/webpack/package.json
+++ b/webpack/package.json
@@ -7,15 +7,18 @@
     "private": true,
     "dependencies": {
         "highlight.js": "^9.12.0",
-        "reveal.js": "^3.7.0"
+        "reveal.js": "^3.7.0",
+        "tailwindcss": "^0.6.5"
     },
     "devDependencies": {
+        "autoprefixer": "^9.1.5",
         "babel-cli": "^6.26.0",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "postcss-loader": "^3.0.0",
         "pug": "^2.0.3",
         "pug-cli": "^1.0.0-alpha6",
         "pug-loader": "^2.4.0",
