--- a/webpack/package.json
+++ b/webpack/package.json
@@ -18,6 +18,7 @@
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.2",
         "postcss-loader": "^3.0.0",
         "pug": "^2.0.3",
         "pug-cli": "^1.0.0-alpha6",
