--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ python: 3.6
 cache: pip
 install:
   - (cd slides && npm install)
-  - pip install pipenv
-  - pipenv install
+  - pip install poetry
+  - poetry install
 script:
   - (cd slides && npm run webpack)
-  - pipenv run lektor build -f webpack
+  - poetry run lektor build -f webpack
 deploy:
   provider: script
-  script: pipenv run lektor deploy ghpages
+  script: poetry run lektor deploy ghpages
   on:
     branch: develop
