--- a/models/news.ini
+++ b/models/news.ini
@@ -1,11 +1,14 @@
 [model]
-name = Page
-label = {{ this.title }}
+name = News
 
 [fields.title]
 label = Title
 type = string
 
-[fields.databag]
-label = Databag
-type = string
+[children]
+model = news-record
+order_by = -published
+
+[pagination]
+enabled = yes
+per_page = 10
