--- a/webpack/package.json
+++ b/webpack/package.json
@@ -6,6 +6,7 @@
   "license": "BSD-2-Clause",
   "private": true,
   "dependencies": {
+    "gitter-sidecar": "^1.3.3",
     "tailwindcss": "^0.7.2",
     "turbolinks": "^5.2.0"
   },
