--- a/webpack/package.json
+++ b/webpack/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "gitter-sidecar": "^1.3.3",
+    "highlight.js": "^9.13.1",
     "tailwindcss": "^0.7.2",
     "turbolinks": "^5.2.0"
   },
