--- a/webpack/package.json
+++ b/webpack/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.5",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
