--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "stylelint": "^9.9.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
-    "lint:js": "eslint --ext .js,.json --ignore-path .gitignore ."
+    "lint:js": "eslint --ext .js,.json --ignore-path .gitignore .",
+    "lint:css": "stylelint '**/*.css'"
   }
 }
