--- a/webpack/package.json
+++ b/webpack/package.json
@@ -14,10 +14,12 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
+    "javascript-typescript-langserver": "^2.11.2",
     "mini-css-extract-plugin": "^0.4.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "vscode-css-languageserver-bin": "^1.4.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
   }
