--- a/webpack/package.json
+++ b/webpack/package.json
@@ -20,6 +20,7 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "vscode-css-languageserver-bin": "^1.4.0",
+    "vscode-html-languageserver-bin": "^1.4.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
   }
