--- a/models/welcome.ini
+++ b/models/welcome.ini
@@ -2,6 +2,14 @@
 name = Welcome
 label = {{ this.title }}
 
+[fields.title]
+label = Title
+type = string
+
+[fields.description]
+label = Description
+type = string
+
 [fields.body]
 label = Body
 type = markdown
