--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Artem Malyshev <proofit404@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 Lektor = "^3.1"
+lektor-webpack-support = "^0.5.0"
+lektor-google-analytics = "^0.1.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
