--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "dry-python-linters",
+  "name": "dry-python-dev",
   "author": "Artem Malyshev",
   "private": true,
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "javascript-typescript-langserver": "^2.11.3",
     "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.3.0"
+    "stylelint-config-standard": "^18.3.0",
+    "vscode-css-languageserver-bin": "^1.4.0",
+    "vscode-html-languageserver-bin": "^1.4.0"
   },
   "scripts": {
     "lint:js": "eslint --ext .js,.json --ignore-path .gitignore .",
