--- a/slides/package.json
+++ b/slides/package.json
@@ -8,8 +8,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
