--- a/webpack/package.json
+++ b/webpack/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^1.0.1",
     "file-loader": "^3.0.1",
