Do not use lektor webpack support to build app.
Webpack failure does not considered as a failure of the whole build
process.  Therefore it's inappropriate to be used in the CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ dist: xenial
 sudo: true
 cache: pip
 install:
+  - (cd app && npm install)
   - (cd slides && npm install)
   - pip install poetry
   - poetry install
 script:
+  - (cd app && npm run webpack)
   - (cd slides && npm run webpack)
-  - poetry run lektor build -f webpack
+  - poetry run lektor build
 deploy:
   provider: script
   script: poetry run lektor deploy ghpages
