--- a/app/package.json
+++ b/app/package.json
@@ -23,5 +23,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
+  },
+  "scripts": {
+    "webpack": "webpack"
   }
 }
