--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "author": "Artem Malyshev",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.2",
     "javascript-typescript-langserver": "^2.11.3",
     "stylelint": "^10.0.1",
@@ -13,7 +15,7 @@
     "vscode-html-languageserver-bin": "^1.4.0"
   },
   "scripts": {
-    "lint:js": "eslint --ext .js,.json --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js --ignore-path .gitignore .",
     "lint:css": "stylelint '**/*.css'"
   }
 }
