--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install poetry
   - poetry install
 script:
+  - npm run lint:js
   - npm run lint:css
   - (cd app && npm run webpack)
   - (cd slides && npm run webpack)
