--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.7"
 Lektor = "^3.1"
 lektor-google-analytics = "^0.1.3"
 
+[tool.poetry.dev-dependencies]
+yamllint = "^1.15"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
