--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - npm run lint:js
   - npm run lint:css
   - npm run lint:pug
-  - poetry run yamllint **/*.yml
+  - poetry run yamllint '**/*.yml'
   - (cd app && npm run webpack)
   - (cd slides && npm run webpack)
   - poetry run lektor build
