--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.19.1",
-    "javascript-typescript-langserver": "^2.11.3",
     "pug-lint": "^2.6.0",
     "stylelint": "^12.0.1",
     "stylelint-config-standard": "^19.0.0",
+    "typescript": "^3.7.4",
+    "typescript-language-server": "^0.4.0",
     "vscode-css-languageserver-bin": "^1.4.0",
     "vscode-html-languageserver-bin": "^1.4.0"
   },
