--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Artem Malyshev <proofit404@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Lektor = "^3.1"
-lektor-google-analytics = "^0.1.3"
+mkdocs = "^1.0.4"
+mkdocs-material = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 yamllint = "^1.20"
