Remove Lektor project.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dry-python-dev",
+  "name": "dry-python.org",
   "author": "Artem Malyshev",
   "private": true,
   "devDependencies": {
