Migrate to Python 3.8.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "dry-python"
+name = "dry-python.org"
 version = "0.1.0"
 description = "dry-python.org website"
 authors = ["Artem Malyshev <proofit404@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 mkdocs = "^1.0.4"
 mkdocs-material = "^4.6.0"
 
