--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.0",
     "pug-lint": "^2.6.0",
+    "remark-cli": "*",
+    "remark-lint": "*",
+    "remark-preset-lint-recommended": "*",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^3.7.5",
@@ -17,8 +20,9 @@
     "vscode-html-languageserver-bin": "^1.4.0"
   },
   "scripts": {
-    "lint:js": "eslint --ext .js --ignore-path .gitignore .",
     "lint:css": "stylelint --ignore-path .gitignore '**/*.css'",
+    "lint:js": "eslint --ext .js --ignore-path .gitignore .",
+    "lint:md": "remark --frail .",
     "lint:pug": "pug-lint **/*.pug"
   }
 }
