--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ mkdocs = "^1.0.4"
 mkdocs-material = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
-yamllint = "^1.20"
+pre-commit = "^1.21.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
