--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ mkdocs-material = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^1.21.0"
+yamllint = "^1.20.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
