--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,9 @@ jobs:
           curl https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh
           echo '##vso[task.prependpath]$(system.defaultWorkingDirectory)/bin'
         displayName: Install Vale.
-      - script: "curl -sSL https://raw.githubusercontent.com\
-          /python-poetry/poetry/master/get-poetry.py | python"
+      - script: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+          echo '##vso[task.prependpath]$(HOME)/.poetry/bin'
         displayName: Install poetry.
       - script: poetry install
         displayName: Install python dependencies.
