--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,8 @@ jobs:
           echo '##vso[task.prependpath]$(system.defaultWorkingDirectory)/bin'
         displayName: Install Vale.
       - script: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+          curl -sSL "https://raw.githubusercontent.com\
+            /python-poetry/poetry/master/get-poetry.py" | python
           echo '##vso[task.prependpath]$(HOME)/.poetry/bin'
         displayName: Install poetry.
       - script: poetry install
