Add git author information.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,8 @@ jobs:
           and(succeeded(),
               eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
         env:
+          GIT_AUTHOR_NAME: $(GIT_AUTHOR_NAME)
+          GIT_AUTHOR_EMAIL: $(GIT_AUTHOR_EMAIL)
           GIT_COMMITTER_NAME: $(GIT_COMMITTER_NAME)
           GIT_COMMITTER_EMAIL: $(GIT_COMMITTER_EMAIL)
           GIT_COMMITTER_PASSWORD: $(GIT_COMMITTER_PASSWORD)
